# DataVisualization

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
datavis/: __init__.py  probe.py
datavis/common/: protocol.py
datavis/gui/: app.py  graph_view.py  labels.py  panels.py  transport.py  tree_view.py
datavis/tracer/: __init__.py  graph.py  hooks.py  roles.py  transport.py
datavis/tracer/backends/: __init__.py  numpy_trace.py  sklearn_pipe.py
examples/: demo_gated.py  demo_mamba.py  demo_preprocess.py  demo_remote.py  demo_signal.py  demo_sklearn.py  demo_torch.py  demo_unified.py
tests/: test_protocol.py  test_remote.py  test_tracer_numpy.py  test_tracer_sklearn.py  test_tracer_torch.py  test_transport.py
