[project]
name = "datavis"
version = "0.1.0"
description = "Dataflow visualization / visual debugger for PyTorch pipelines"
requires-python = ">=3.10"
# Core = only what the tracer needs when imported into the user's training
# process (IPC + tensor packing). It pulls in NO GUI / framework stack, so
# instrumenting a program — incl. on a headless remote GPU box — stays light.
dependencies = [
    "pyzmq>=25",
    "msgpack>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# The separate viewer process. Install on whatever machine runs the GUI.
gui = ["pyqtgraph>=0.13", "PyQt6>=6.5"]
# Demo-/test-only frameworks — never required by the visualizer itself.
torch = ["torch>=2.1"]
sklearn = ["scikit-learn>=1.3"]
# Everything to run the test suite (the GUI tests need the gui stack).
dev = ["datavis[gui]", "pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datavis"]
